test/deprecated/parenful/not-parenless.good
not-parenless.chpl:2: In function 'f':
not-parenless.chpl:2: error: the '@deprecated' attribute with 'parenless=true' can only be applied to parenless procedures
