test/deprecated/parenful/not-parenless.chpl
@deprecated(notes="the parenful version of function f() is deprecated", parenless=true)
proc f() {
    return 42;
}

var x = f();
